# airbyte-api/src/main/openapi/config.yaml
@@ -2853,6 +2853,8 @@ components:
         - dockerRepository
         - dockerImageTag
         - documentationUrl
+        - supportsDbt
+        - normalizationConfig
       properties:
         destinationDefinitionId:
           $ref: "#/components/schemas/DestinationDefinitionId"
@@ -4339,11 +4341,13 @@ components:
       description: describes a normalization config for destination definition
       type: object
       required:
-        - normalizationRepository
-        - normalizationTag
-        - normalizationIntegrationType
+        - supported
       additionalProperties: false
       properties:
+        supported:
+          type: boolean
+          description: whether the destination definition supports normalization.
+          default: false
         normalizationRepository:
           type: string
           description: a field indicating the name of the repository to be used for normalization. If the value of the flag is NULL - normalization is not used.
